2003-01-27  Richard Williamson   <rjw@apple.com>

        Make emptying the page cache synchronous when "Empty Cache"
        is selected from menu.  More bulletproofing to ensure that
        3155781 doesn't happen.
        
        Reviewed by trey.

        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList clearPageCache]):

2003-01-27  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3156235 - change throttle for plug-in null events to 50 frames per second (when frontmost)

        Reviewed by dave.

        * Plugins.subproj/WebBaseNetscapePluginView.m:

2003-01-27  Richard Williamson   <rjw@apple.com>

        Fixed 3151241.  Cleanly handle nil return from resource:willSendRequest:fromDataSource:.
        
        Reviewed by trey.

        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate handle:willSendRequest:]):
        (-[WebBaseResourceHandleDelegate handleDidFinishLoading:]):
        (-[WebBaseResourceHandleDelegate handle:didFailLoadingWithError:]):
        (-[WebBaseResourceHandleDelegate cancelWithError:]):
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _mainReceivedError:fromDataSource:complete:]):

2003-01-27  John Sullivan  <sullivan@apple.com>

	- fixed 3156744 -- REGRESSION: Renaming bookmarks dragged 
	into bookmark bar does not work at first

        Reviewed by Darin

        * Bookmarks.subproj/WebBookmarkList.m:
        (-[WebBookmarkList insertChild:atIndex:]):
	was adding self to its own group (a no-op), instead of adding
	the new child to self's group. This was a typo from the
	refactoring to fix 3152427.

2003-01-27  Chris Blumenberg  <cblu@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Updated for changes I previously made.

2003-01-26  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3156725 - Partially selected links show extra underlining when dragged

        Reviewed by darin.

        * WebCoreSupport.subproj/WebTextRenderer.m: