@@ -1,3 +1,12 @@
+2003-01-27  Trey Matteson  <trey@apple.com>
+
+	3157104 - reproducible assert in _continueFragmentScrollAfterNavigationPolicy
+
+	Remove assertion, and it turns out the existing code will handle the case.
+
+        * WebView.subproj/WebFramePrivate.m:
+        (-[WebFrame _continueFragmentScrollAfterNavigationPolicy:request:]):
+
 2003-01-27  Richard Williamson   <rjw@apple.com>
 
         Make emptying the page cache synchronous when "Empty Cache"
